--- a/pom.xml
+++ b/pom.xml
@@ -535,6 +535,7 @@
 			<directory>src/main/resources</directory>
 			<includes>
 				<include>**/*.properties</include>
+				<include>**/*.txt</include>
 				<include>**/*.html</include>
 			</includes>
 			<filtering>false</filtering>
