--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,37 +3,44 @@
 # Copyright (c) 2016 Mind Consulting UG(haftungsbeschr?nkt)
 #
 # embedded tomcat server port
-server.port=8088
+server.port=18088
+server.ssl.key-store=../conf/server.keystore
+server.ssl.key-password=123456
+server.ssl.key-store-password=123456
+server.ssl.key-alias=tomcat
+
 server.tomcat.uri-encoding=utf-8
 spring.http.encoding.force=true
 spring.http.encoding.charset=UTF-8
 spring.http.encoding.enabled=true
 
+spring.banner.location=classpath:banner.txt
+spring.banner.charset=UTF-8
+spring.main.banner-mode=console
+
 s3server.baseUrl=/api/s3
 # thread pool for the repository access
-s3server.threadPoolSize=100
+s3server.threadPoolSize=200
 # enable or disable the authorization header check. if disabled, the system user will be used for all requests
 # and all data is exposed to public!
-s3server.securityEnabled=false
+s3server.securityEnabled=true
 # switch to enable logging. each api request and each repository call will be logged
-s3server.loggingEnabled=true
+s3server.loggingEnabled=false
 s3server.fsrepo.root=../s3cache
-s3server.s3store.accessKey=SYSTEM
-s3server.s3store.secretKey=SYSTEM
 s3server.uploadShardThreadNum =500
 s3server.downloadThread =200
 s3server.uploadBlockThreadNum=30
-
+s3server.maxRetryTimes=30
 #2-30
 s3server.uploadFileMaxMemory=5
 #
-s3server.cosBackUp=on
+s3server.cosBackUp=true
 #S3Server安装目录
 s3server.dirctory=../conf
 #预分配节点数
-s3server.PNN=200
+s3server.PNN=1000
 #节点列表更新周期（分钟）
-s3server.PTR=1
+s3server.PTR=2
 #块上传错误重试次数
 s3server.RETRYTIMES = 500
 s3server.zipkinServer=
@@ -44,23 +51,13 @@ s3server.userID=1
 s3server.port=6611
 s3server.url=
 #用于判断文件是否需要写入缓存，大于当前配置的值写入缓存，小于则直接存放在内存中
-s3server.allowMaxSize=209715200
-s3server.SYNC=on
+s3server.allowMaxSize=12097152
+s3server.SYNC=false
 s3server.SYNC_BUCKET=test
 s3server.queueSize=1000
-s3server.syncCount=5
+s3server.syncCount=10
 s3server.cosBucket=tmpupload-yotta
 #研发网
 #s3server.eosHistoryUrl=http://47.112.119.28:8888/v1/history/
-#3节点
-#s3server.eosHistoryUrl=http://47.94.166.95:8888/v1/history/
 #主网
-s3server.eosHistoryUrl=http://ytsapi02.yottachain.net:8888/v1/history/
-#商业测试
-#s3server.eosHistoryUrl=http://132.232.219.237:8181/v1/history/
-#Docker
-#s3server.eosHistoryUrl=http://172.18.0.2:8888/v1/history/
-
-s3server.username=storename123
-s3server.KUSp=5Htg5yU4LS9K6H1ZSTJrXNoFiDWFR7nFgiitQMjnSkcQ7Bc39QV
-
+s3server.eosHistoryUrl=http://yts3api.yottachain.net:8888/v1/history/
